--- a/src/pages/administrativo/administrativo.module.css
+++ b/src/pages/administrativo/administrativo.module.css
@@ -1,50 +1,54 @@
 .view {
+    display: flex; /* Adiciona flexbox para organizar os itens ao lado */
     width: 100vw;
     height: 100vh;
 }
 
 .sidebar {
-    position: absolute;
-    width: 25vw;
-    height: 100vh;
+    width: 25vw; /* Define a largura da barra lateral */
     background-color: #181C14;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px 0;
 }
 
 .sidebar ul {
-    display: flex;
-    flex-direction: column;
-    height: 90%;
-    justify-content: center;
-    padding-inline-start: 20px;
-    padding-inline-end: 20px;
+    list-style: none;
+    padding: 0;
 }
 
 .sidebar li {
     font-family: sans-serif;
     color: white;
-    list-style: none;
     padding: 15px;
     margin: 10px 0;
     transition: 0.5s;
 }
 
-.sidebar li a{
+.sidebar li a {
     color: white;
     text-decoration: none;
 }
 
-.sidebar li svg{
+.sidebar li svg {
     margin-right: 10px;
 }
 
-.sidebar li:not(:first-child):hover{
+.sidebar li:not(:first-child):hover {
     background-color: #3C3D37;
     padding-left: 20px;
     transition: 0.5s;
 }
 
-.sidebar li:first-child{
+.sidebar li:first-child {
     font-weight: bolder;
     text-align: center;
 }
 
+.content {
+    flex-grow: 1; /* Faz o conteúdo ocupar o espaço restante */
+    padding: 20px;
+    background-color: #f4f4f4; /* Altere a cor de fundo conforme necessário */
+    overflow-y: auto; /* Adiciona barra de rolagem caso o conteúdo seja muito longo */
+}
