--- a/src/components/Cliente/agendarAula.module.css
+++ b/src/components/Cliente/agendarAula.module.css
@@ -16,6 +16,16 @@
     width: 50%;
 }
 
+.left button{
+    box-shadow: none;
+    color: black;
+    border-radius: 0;
+}
+
+.left .button{
+    box-shadow: none;
+}
+
 
 /* Estilo para datas marcadas no calendário */
 .marked {
