--- a/src/components/Cliente/pagamento.module.css
+++ b/src/components/Cliente/pagamento.module.css
@@ -30,6 +30,10 @@
     padding: 10px 18px;
     border-radius: 5px;
     cursor: pointer;
+    width: 250px;
+    margin-top: 0;
+    font-weight: 100;
+    height: min-content;
 }
 
 .botaoModal:hover {
@@ -104,14 +108,14 @@
 
 .planosGrid {
     display: flex;
-    gap: 20px;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .plano {
     border: 2px solid #ccc;
     border-radius: 8px;
-    padding: 15px;
+    padding: 10px;
     width: 170px;
     position: relative;
 }
@@ -148,6 +152,9 @@
     padding: 7px 14px;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
+    font-size: small;
+    margin-top: 0;
 }
 
 .botaoRenovar:hover,
@@ -155,11 +162,11 @@
     background: #0056b3;
 }
 
-.option{
+.option {
     display: flex;
     justify-content: space-between;
 }
 
-.option h3{
+.option h3 {
     margin: 5px;
 }
