--- a/src/components/Cliente/treinoPersonalizado.module.css
+++ b/src/components/Cliente/treinoPersonalizado.module.css
@@ -68,7 +68,9 @@
 
 .favBtn {
     background: none;
+    width: min-content;
     border: none;
+    box-shadow: none;
     font-size: 1.5rem;
     cursor: pointer;
     color: #f4b400;
